Fix grid view on Safari

--- a/assets/css/category-buttons.scss
+++ b/assets/css/category-buttons.scss
@@ -21,7 +21,6 @@
   background: var(--category-btn-bg);
   border: var(--category-btn-border);
   border-radius: 2px;
-  height: 100%;
   width: 100%;
   @media screen and (min-width: 993px) {
     aspect-ratio: 1;
